Actualizando documentación de servicios store y update products.
